--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="css/style.css" />
         <link rel="stylesheet" href="css/media.css" />
     </head>
-    <body>
+    <body id="body">
         <header class="header" id="header">
             <div class="header__top">
                 <div class="container">
@@ -23,22 +23,22 @@
                         </a>
                         <ul class="nav__menu">
                             <li class="nav__menu-item">
-                                <a href="#" class="nav__menu-link">HOME</a>
+                                <a href="#body" class="nav__menu-link scroll-to">HOME</a>
                             </li>
                             <li class="nav__menu-item">
-                                <a href="#about" class="nav__menu-link">ABOUT US</a>
+                                <a href="#about" class="nav__menu-link scroll-to">ABOUT US</a>
                             </li>
                             <li class="nav__menu-item">
-                                <a href="#portfolio" class="nav__menu-link">PORTFOLIO</a>
+                                <a href="#portfolio" class="nav__menu-link scroll-to">PORTFOLIO</a>
                             </li>
                             <li class="nav__menu-item">
-                                <a href="#team" class="nav__menu-link">OUR TEAM</a>
+                                <a href="#team" class="nav__menu-link scroll-to">OUR TEAM</a>
                             </li>
                             <li class="nav__menu-item">
-                                <a href="#" class="nav__menu-link">BLOG</a>
+                                <a href="#" class="nav__menu-link scroll-to">BLOG</a>
                             </li>
                             <li class="nav__menu-item">
-                                <a href="#connect" class="nav__menu-link">CONTACT</a>
+                                <a href="#connect" class="nav__menu-link scroll-to">CONTACT</a>
                             </li>
                         </ul>
                         <button class="menu-btn">
@@ -54,7 +54,7 @@
                     <h1 class="header__content-title">O...MARKETING</h1>
                     <h4 class="header__content-subtitle">DIGITAL MARKETING AGENCY</h4>
                 </div>
-                <a class="header__content-mouse" href="#about">
+                <a class="header__content-mouse scroll-to" href="#about">
                     <svg width="26" height="43" viewBox="0 0 26 43" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <g clip-path="url(#clip0_1_258)">
                             <path class="dot-animate" fill-rule="evenodd" clip-rule="evenodd" d="M13 14C14.6569 14 16 12.6569 16 11C16 9.34315 14.6569 8 13 8C11.3431 8 10 9.34315 10 11C10 12.6569 11.3431 14 13 14Z" fill="white" />
@@ -375,7 +375,7 @@
                             <a class="footer__tel" href="tel:3806765252222">(38067) 65 252 222</a>
                             <a class="footer__email" href="mailto:info@mail.com">info@mail.com</a>
                         </div>
-                        <a class="footer__totop animate__animated animate__slideInUp animate__infinite" href="#header">
+                        <a class="footer__totop scroll-to animate__animated animate__slideInUp animate__infinite" href="#header">
                             <img src="images/angle-up.svg" alt="link to top" />
                         </a>
                     </div>
